[package]
name = "spoof_detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
etherparse = "0.13.0"
pcap-parser = { version = "0.14.0", features = ["data"] }
serde = "1.0.155"
serde_derive = "1.0.155"
serde_json = "1.0.94"
